Fix data structure to prepare ordering, filtering and pagination (#84) Remove webflux (#85)
Signed-off-by: LE SAULNIER Kevin <kevin.lesaulnier@rte-france.com>